<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">&#160;Email</string>
    <string name="prompt_password">&#160;Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="find_id">아이디 찾기</string>
    <string name="change_password">비밀번호 변경하기</string>
    <string name="join">회원가입</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="search_insert">\t\t\t\t\t\t\t\t 상품을 검색하세요</string>

    <string name="phone_number">휴대전화\n번호</string>
    <string name="phone_number_auth">휴대전화\n번호인증</string>
    <string name="user_id">아이디\n입력</string>
    <string name="user_name">이름\n입력</string>
    <string name="user_address">주소\n입력</string>
    <string name="user_account">계좌번호\n입력</string>

    <string name="joining_caution">휴대전화 번호 인증은 필수입니다.</string>
    <string name="joining_cation_2">아이디와 이름 입력은 필수입니다.</string>

    <string name="check_user_id">아이디\n중복검사</string>
    <string name="joining">회원가입하기</string>

    <string name="login">로그인하기</string>

    <string name="new_password">새 비밀번호\n입력</string>
    <string name="new_password_confirm">비밀번호\n재입력</string>
    <string name="change_password_first_page">다음 단계</string>

    <string name="user_password">비밀번호\n입력</string>
    <string name="user_password_confirm">비밀번호\n재입력</string>

    <string name="caution_password_security">특수문자, 영어소문자, 숫자를 포함하여 8~14자로 입력하세요.</string>
    <string name="caution_id_security">영어소문자, 숫자를 포함하여 5~12자로 입력하세요.</string>
    <string name="auth_number">인증번호</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="go_main">물건 구경가기</string>
</resources>
