<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindIdActivity"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391">

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/darkGray">

        </TextView>

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:layout_marginLeft="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/buttonborder_maintextcolor"
            tools:layout_editor_absoluteX="80dp"
            android:textColor="@color/darkGray">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userPhoneNumberTextView"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="@color/darkGray">

        </TextView>

        <EditText
            android:id="@+id/userPhoneNumberEditText"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:layout_marginLeft="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/buttonborder_maintextcolor"
            tools:layout_editor_absoluteX="80dp"
            android:textColor="@color/darkGray">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/findIdButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="436dp"
        android:background="@drawable/button_fill_border"
        android:text="@string/find_id"
        android:textColor="@color/darkGray"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:stateListAnimator="@null">

    </Button>

    <Button
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backarrow"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>